[gd_scene load_steps=5 format=3 uid="uid://bo8bqjx01sd2r"]

[ext_resource type="Script" uid="uid://dvfrpraihwted" path="res://hud.gd" id="1_37p78"]

[sub_resource type="Theme" id="Theme_37p78"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37p78"]
bg_color = Color(0, 0, 0, 0.78431374)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64ctp"]
bg_color = Color(0.27450982, 0.78431374, 0.19607843, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HealthBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Player Health"

[node name="HealthProgress" type="ProgressBar" parent="MarginContainer/VBoxContainer/HealthBar"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme = SubResource("Theme_37p78")
theme_override_styles/background = SubResource("StyleBoxFlat_37p78")
theme_override_styles/fill = SubResource("StyleBoxFlat_64ctp")
value = 100.0
show_percentage = false

[node name="RoomLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthBar"]
layout_mode = 2
text = "Start"
